--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "aimake-plugin-plugin",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "main": "index.js",
   "description": "AiMake plugin plugin.",
   "license": "MIT",
@@ -15,6 +15,7 @@
   ],
   "devDependencies": {
     "babel-cli": "^6.26.0",
+    "babel-plugin-add-module-exports": "^0.2.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-0": "^6.24.1",
